--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Deploy to Render
       run: |
         curl -X POST "https://api.render.com/v1/deploys" \
-        -H "Authorization: Bearer rnd_OAAxI34Ko8ofzoNZBRThYdZt1PJm" \
+        -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
         -H "Content-Type: application/json" \
         -d "{"web": {"buildCommand": "your-build-command", "startCommand": "your-start-command"}}"
