fix render deploy workflow

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -11,11 +11,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Deploy to Render
       run: |
-        curl -X POST "https://api.render.com/v1/deploys" \
+        curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
         -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-        -H "Content-Type: application/json" \
-        -d "{"web": {"buildCommand": "your-build-command", "startCommand": "your-start-command"}}"
+        -H "Content-Type: application/json"
