add delay in workflow

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -20,6 +20,10 @@ jobs:
         -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
         -H "Content-Type: application/json"
 
+    - name: Pause for 30 seconds
+      run: |
+          sleep 30
+
     - name: Run tests
       uses: convictional/trigger-workflow-and-wait@v1.6.1
       with:
