--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -14,15 +14,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Deploy to Render
-      run: |
-        curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
-        -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-        -H "Content-Type: application/json"
-
-    - name: Pause for 180 seconds
-      run: |
-          sleep 180
+    - name: Deploy to Render and wait
+      uses: bounceapp/render-action@0.6.0
+      with:
+        render-token: ${{ secrets.RENDER_API_KEY }}
+        service-id: ${{ secrets.RENDER_SERVICE_ID }}
+        retries: 20
+        wait: 30000
+        sleep: 30000
 
     - name: Run tests
       uses: convictional/trigger-workflow-and-wait@v1.6.1
