--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -13,16 +13,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
+    
     - name: Deploy to Render and wait
-      uses: bounceapp/render-action@0.6.0
+      uses: johnbeynon/render-deploy-action@v0.0.8
       with:
-        render-token: ${{ secrets.RENDER_API_KEY }}
-        github-token: ${{ secrets.PAT_TEST_RUN }}
         service-id: ${{ secrets.RENDER_SERVICE_ID }}
-        retries: 20
-        wait: 30000
-        sleep: 30000
+        api-key: ${{ secrets.RENDER_API_KEY }}
+        wait-for-success: true
 
     - name: Run tests
       uses: convictional/trigger-workflow-and-wait@v1.6.1
